--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,3 +36,48 @@
 </header><!-- /.masthead -->{% endif %}
 
 <div class="js-menu-screen menu-screen"></div>
+<a class="twitter-timeline"
+  href="https://twitter.com/Toffeesmen"
+  data-widget-id="YOUR-WIDGET-ID-HERE">
+Tweets by @Toffeesmen
+</a>
+<script type="text/javascript">
+window.twttr = (function (d, s, id) {
+  var t, js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id; js.src= "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+  return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
+}(document, "script", "twitter-wjs"));
+</script>
+<a class="twitter-timeline"
+  width="300"
+  height="500"
+  href="https://twitter.com/Toffeesmen"
+  data-widget-id="YOUR-WIDGET-ID-HERE">
+Tweets by @Toffeesmen
+</a>
+<a class="twitter-timeline"
+  href="https://twitter.com/Toffeesmen"
+  data-widget-id="YOUR-WIDGET-ID-HERE"
+  data-theme="dark"
+  data-link-color="#cc0000"
+  data-related="twitterapi,twitter"
+  data-aria-polite="assertive"
+  width="300"
+  height="500">
+Tweets by @Toffeesmen
+</a>
+<a class="twitter-timeline"
+  href="https://twitter.com/Toffeesmen"
+  data-widget-id="YOUR-WIDGET-ID-HERE"
+  data-chrome="nofooter noborders transparent">
+Tweets by @Toffeesmen
+</a>
+<a class="twitter-timeline"
+  href="https://twitter.com/Toffeesmen"
+  data-widget-id="YOUR-WIDGET-ID-HERE"
+  data-chrome="nofooter"
+  data-tweet-limit="3">
+Tweets by @Toffeesmen
+</a>
