--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,3 +36,31 @@
 </header><!-- /.masthead -->{% endif %}
 
 <div class="js-menu-screen menu-screen"></div>
+class YouTube < Liquid::Tag
+  Syntax = /^\s*([^\s]+)(\s+(\d+)\s+(\d+)\s*)?/
+ 
+  def initialize(tagName, markup, tokens)
+    super
+ 
+    if markup =~ Syntax then
+      @id = $1
+ 
+      if $2.nil? then
+          @width = 560
+          @height = 420
+      else
+          @width = $2.to_i
+          @height = $3.to_i
+      end
+    else
+      raise "No YouTube ID provided in the \"youtube\" tag"
+    end
+  end
+ 
+  def render(context)
+    # "<iframe width=\"#{@width}\" height=\"#{@height}\" src=\"http://www.youtube.com/watch?v=R5wA8wr5ccg#{@id}\" frameborder=\"0\"allowfullscreen></iframe>"
+    "<iframe width=\"#{@width}\" height=\"#{@height}\" src=\"http://www.youtube.com/watch?v=R5wA8wr5ccg#{@id}?color=white&theme=light\"></iframe>"
+  end
+ 
+  Liquid::Template.register_tag "youtube", self
+end
