--- a/_includes/ad-sidebar.html
+++ b/_includes/ad-sidebar.html
@@ -9,48 +9,45 @@
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div><!-- /.google-ads -->
-<a class="twitter-timeline"
-  href="https://twitter.com/Toffeesmen"
-  data-widget-id="YOUR-WIDGET-ID-HERE">
-Tweets by @Toffeesmen
-</a>
-<script type="text/javascript">
-window.twttr = (function (d, s, id) {
-  var t, js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id; js.src= "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
-  return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
-}(document, "script", "twitter-wjs"));
-</script>
-<a class="twitter-timeline"
-  width="300"
-  height="500"
-  href="https://twitter.com/Toffeesmen"
-  data-widget-id="YOUR-WIDGET-ID-HERE">
-Tweets by @Toffeesmen
-</a>
-<a class="twitter-timeline"
-  href="https://twitter.com/Toffeesmen"
-  data-widget-id="YOUR-WIDGET-ID-HERE"
-  data-theme="dark"
-  data-link-color="#cc0000"
-  data-related="twitterapi,twitter"
-  data-aria-polite="assertive"
-  width="300"
-  height="500">
-Tweets by @Toffeesmen
-</a>
-<a class="twitter-timeline"
-  href="https://twitter.com/Toffeesmen"
-  data-widget-id="YOUR-WIDGET-ID-HERE"
-  data-chrome="nofooter noborders transparent">
-Tweets by @Toffeesmen
-</a>
-<a class="twitter-timeline"
-  href="https://twitter.com/Toffeesmen"
-  data-widget-id="YOUR-WIDGET-ID-HERE"
-  data-chrome="nofooter"
-  data-tweet-limit="3">
-Tweets by @Toffeesmen
-</a>
+# Jekyll - Easy Youtube Embed
+#
+# Katie Harron - https://github.com/pibby
+#
+#   Input:
+#     {% youtube Al9FOtZcadQ %}
+#   Output:
+#   <div class="video">
+#     <figure>
+#       <iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
+#     </figure>
+#   </div>
+
+module Jekyll
+  class Youtube < Liquid::Tag
+    @url = nil
+
+    VIDEO_URL = /(\S+)/i
+
+    def initialize(tag_name, markup, tokens)
+      super
+
+      if markup =~ VIDEO_URL
+        @url = $1
+      end
+    end
+
+    def render(context)
+
+      source = "<div class=\"video\">"
+
+      source += "<figure>"
+      source += "<iframe width=\"640\" height=\"480\" src=\"//www.youtube.com/embed/#{@url}?rel=0\" frameborder=\"0\" allowfullscreen></iframe>"
+      source += "</figure>"
+      source += "</div>"
+
+      source
+    end
+  end
+end
+
+Liquid::Template.register_tag('youtube', Jekyll::Youtube)
