--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,18 +36,12 @@
 </header><!-- /.masthead -->{% endif %}
 
 <div class="js-menu-screen menu-screen"></div>
-# Jekyll - Easy Youtube Embed
-#
-# Katie Harron - https://github.com/pibby
-#
-#   Input:
-#     {% youtube Al9FOtZcadQ %}
-#   Output:
-#   <div class="video">
-#     <figure>
-#       <iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
-#     </figure>
-#   </div>
+
+<div class="video">
+<figure>
+<iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
+</figure>
+</div>
 
 module Jekyll
   class Youtube < Liquid::Tag
