--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,6 +47,25 @@ window.twttr = (function (d, s, id) {
   height="500"
   href="https://pinterest.com/bkeverton"
   data-widget-id="YOUR-WIDGET-ID-HERE">
+<a class="youtube-timeline"
+  href="https://youtube.com/Tosaporn Everton"
+  data-widget-id="YOUR-WIDGET-ID-HERE">
+youtube by @Tosaporn Everton
+</a>
+<script type="text/javascript">
+window.twttr = (function (d, s, id) {
+  var t, js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id; js.src= "https://platform.youtube.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+  return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
+}(document, "script", "pinterestr-wjs"));
+</script>
+<a class="youtube-timeline"
+  width="300"
+  height="500"
+  href="https://youtube.com/Tosaporn Everton"
+  data-widget-id="YOUR-WIDGET-ID-HERE">
 
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/so-simple/">So Simple Theme</a>.</span>
 <div class="social-icons">
