--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,9 +48,9 @@ window.twttr = (function (d, s, id) {
   href="https://pinterest.com/bkeverton"
   data-widget-id="YOUR-WIDGET-ID-HERE">
 <a class="youtube-timeline"
-  href="https://youtube.com/TosapornEverton"
+  href="https://youtube.com/toffeesmen"
   data-widget-id="YOUR-WIDGET-ID-HERE">
-youtube by @TosapornEverton
+youtube by @toffeesmen
 </a>
 <script type="text/javascript">
 window.twttr = (function (d, s, id) {
@@ -64,7 +64,7 @@ window.twttr = (function (d, s, id) {
 <a class="youtube-timeline"
   width="300"
   height="500"
-  href="https://youtube.com/TosapornEverton"
+  href="https://youtube.com/toffeesmen"
   data-widget-id="YOUR-WIDGET-ID-HERE">
 
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/so-simple/">So Simple Theme</a>.</span>
