--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -39,6 +39,6 @@
 
 <div class="video">
 <figure>
-<iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
+<iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen"align ="center"></iframe>
 </figure>
 </div>
