--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -36,9 +36,10 @@
 </header><!-- /.masthead -->{% endif %}
 
 <div class="js-menu-screen menu-screen"></div>
-
+<CENTER>
 <div class="video">
 <figure>
-<iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen"align ="centre"></iframe>
+<iframe width="640" height="480" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
 </figure>
+</CENTER>
 </div>
