--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <div class="fb-comments" data-href="http://wetlandstory.github.io/newwetlandstory/" data-width="580" data-numposts="5" data-colorscheme="light"></div>
+<a class="twitter-timeline" href="https://twitter.com/Toffeesmen" data-widget-id="513671162488840192">Tweets by @Toffeesmen</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <a class="twitter-timeline"
   href="https://twitter.com/Toffeesmen"
   data-widget-id="YOUR-WIDGET-ID-HERE">
