--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -39,7 +39,7 @@
 <CENTER>
 <div class="video">
 <figure>
-<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" frameborder="0"></iframe>
+<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
 </figure>
 </CENTER>
 </div>
