--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -35,10 +35,11 @@
 	</div>
 </header><!-- /.masthead -->{% endif %}
 
+<div class="js-menu-screen menu-screen"></div>
 <CENTER>
 <div class="video">
 <figure>
-<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" allowfullscreen></iframe>
+<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" frameborder="0" allowfullscreen></iframe>
 </figure>
 </CENTER>
 </div>
