--- a/_includes/ad-sidebar.html
+++ b/_includes/ad-sidebar.html
@@ -9,3 +9,10 @@
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div><!-- /.google-ads -->
+<CENTER>
+<div class="video">
+<figure>
+<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" frameborder="0" allowfullscreen></iframe>
+</figure>
+</CENTER>
+</div>
