--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 {% if site.owner.google.ad-client and site.owner.google.ad-slot %}{% include ad-footer.html %}{% endif %}
+<CENTER>
+<div class="video">
+<figure>
+<iframe width="560" height="315" src="//www.youtube.com/embed/R5wA8wr5ccg" frameborder="0" allowfullscreen></iframe>
+</figure>
+</CENTER>
+</div>
 <a class="twitter-timeline" href="https://twitter.com/Toffeesmen" data-widget-id="513671162488840192">Tweets by @Toffeesmen</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <div id="fb-root"></div>
