--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
 </figure>
 </CENTER>
 </div>
+<CENTER>
 <a class="twitter-timeline" href="https://twitter.com/Toffeesmen" data-widget-id="513671162488840192">Tweets by @Toffeesmen</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <div id="fb-root"></div>
@@ -16,11 +17,15 @@
   js.src = "//connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<CENTER>
 
+<CENTER>
 <div class="fb-comments" data-href="http://wetlandstory.github.io/newwetlandstory/" data-width="580" data-numposts="5" data-colorscheme="light"></div>
 <a class="twitter-timeline"
   href="https://twitter.com/Toffeesmen"
   data-widget-id="YOUR-WIDGET-ID-HERE">
+<CENTER>
+
 Tweets by @Toffeesmen
 </a>
 <script type="text/javascript">
